force-app/main/default/objects/Serminar__c/Serminar__c.object-meta.xml
<CustomObject>
    <label>Serminar</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>