force-app/main/default/objects/Serminar__c/fields/Total_Section__c.field-meta.xml
<CustomField>
    <fullName>Total_Section__c</fullName>
    <label>Total Section</label>
    <summaryForeignKey>Section__c.Serminar__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>