force-app/main/default/objects/Serminar__c/validationRules/CheckEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEndDate</fullName>
    <active>false</active>
    <errorConditionFormula>IF( End_Date__c &lt; Start_Date__c || End_Date__c &lt; Today(), 
        TRUE, 
        FALSE
    )</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The end date must be after the start date and a future day.</errorMessage>
</ValidationRule>