force-app/main/default/objects/Serminar__c/validationRules/CheckStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckStartDate</fullName>
    <active>false</active>
    <description>Validating that the start date is the current or future date</description>
    <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>The Start Date must be today or a future date.</errorMessage>
</ValidationRule>